atualização de novos componentes no layout

--- a/src/app/modules/home/home.page.html
+++ b/src/app/modules/home/home.page.html
@@ -24,26 +24,11 @@
     </div>
 </div>
 
-<!-- Tela de cards -->
-<div class="container-music-cards">
-    
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-    <imusic-card />
-</div>
+<!-- Tela de cards por gênero musical -->
+<imusic-general-list 
+    [title]="'Rock'"
+/>
+
+<imusic-general-list 
+    [title]="'Sertanejo'"
+/>
