--- a/src/app/shared/components/imusic-card/imusic-card.component.html
+++ b/src/app/shared/components/imusic-card/imusic-card.component.html
@@ -1,11 +1,23 @@
 <!-- Tela de cards -->
 <div class="container-music-cards">
 
-    <!-- Imagem do álbum do artista -->
-    <img 
-        class="artist-image"
-        src="https://m.media-amazon.com/images/I/81m0BptHZ4L._UF1000,1000_QL80_.jpg"
-        title="Imagem do álbum do artista"
-        alt="Imagem do álbum do artista"
-    />
+    <!-- Imagem e botão de cards -->
+    <div class="container-album">
+
+        <!-- Imagem do álbum do artista -->
+        <img 
+            class="artist-image"
+            src="https://m.media-amazon.com/images/I/81m0BptHZ4L._UF1000,1000_QL80_.jpg"
+            title="Imagem do álbum do artista"
+            alt="Imagem do álbum do artista"
+        />
+
+        <!-- Botão de tocar -->
+        <button class="play-card-btn">
+            <fa-icon [icon]="iconPlay" />
+        </button>
+    </div>
+
+    <!-- Texto de descrição do álbum -->
+    <p class="description-album-text">Paramore - Brand New Eyes</p>
 </div>
